--- a/douban/pubspec.yaml
+++ b/douban/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: 3.0.10 #latest version
   provider: ^4.0.0
+  event_bus: ^1.1.1
+
   flutter_localizations:
     sdk: flutter
 
